# ofplang

./: .gitignore  README.md  _entity_type.py  builtins.yaml  definitions.py  entity_type.py  entity_types.py  executors.py  manipulate.yaml  nodes.py  protocol.py  pyproject.toml  requirements.txt  runner.py  sample.py  sample.yaml  sample1.py  sample2.py  sample3.py  sample4.py  sample5.py  sample6.py  setup.py  simulator.py  validate.py
.github/workflows/: test.yaml
app/: app.py  main.py
legacy/: manipulate.yaml  sample6.py  sample7.py
ofplang/: _entity_type.py  definitions.py  entity_type.py  executors.py  prelude.py  protocol.py  runner.py  validate.py
ofplang/base/: __init__.py  _entity_type.py  definitions.py  entity_type.py  executor.py  protocol.py  runner.py  validate.py
ofplang/executors/: __init__.py  builtin.py  fluent.py  simulator.py
ofplang/tecan/: __init__.py
samples/: definitions.yaml  inputs1.yaml  manipulate.yaml  protocol1.yaml  sample1-2.py  sample1-3.py  sample1.py  sample1.yaml  sample2.yaml  sample3.py  sample3.yaml  sample4.py  sample5.py  sample6.py  sample_graph.py  sample_nn.py  sample_nn.yaml  sample_optuna1.py  sample_run.py  toy.yaml
samples/legacy/: sample1-2.py  sample1.py  sample2.py  sample2.yaml
src/ofplang/: prelude.py
src/ofplang/base/: __init__.py  _entity_type.py  builtin_definitions.yaml  definitions.py  definitions_schema.yml  entity_type.py  executor.py  model.py  protocol.py  protocol_schema.yml  runner.py  store.py  utils.py  validate.py
src/ofplang/executors/: __init__.py  builtin.py  checker.py  fluent.py  simulator.py
src/ofplang/executors/tecan/: __Fluent.py  __init__.py
src/ofplang/scripts/: cli.py
src/ofplang/tools/: graph.py
tecan/: demo1.py  experiments.py  experiments1.py  experiments2.py  experiments3.py  test_connection.py
tests/: test_protocol.py
