[tool.poetry]
name = "ofplang"
version = "0.1.0"
description = ""
authors = ["Kazunari Kaizu <kaizu@riken.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.0"
scipy = "^1.14.1"
pyyaml = "^6.0.2"
scikit-learn = "^1.6.0"
sila2 = "^0.12.2"
optuna = "^4.1.0"
matplotlib = "^3.9.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
mypy = "^1.13.0"
pytest-env = "^1.1.5"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ofplang = 'ofplang.scripts.cli:main'

[tool.ruff.lint]
ignore = ["E701"]