[project]
name = "ofplang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
include = [
    "src/ofplang/base/protocol_schema.yml",
    "src/ofplang/base/definitions_schema.yml",
    "src/ofplang/base/builtin_definitions.yaml",
]
requires-python = ">=3.11.3"
dependencies = [
    "numpy>=2.3.0",
    "pyyaml>=6.0.2",
    "sila2>=0.12.2",
    "yamale>=6.0.0",
]

[project.optional-dependencies]
store = [
    "minio>=7.2.15",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.0",
    "pytest-env>=1.1.5",
    "ruff>=0.12.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
]

[tool.ruff.lint]
ignore = ["E701"]
